# clearocr-app

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
.github/workflows/: build-windows.yml
clearocr_app/: __main__.py  engine.py  i18n.py  logo_asset.py  main.py  main.py__old  ui_theme.py  widgets.py
