[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "clearocr-app"
version = "0.1.0"
description = "Desktop client for clearOCR API"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "Apache-2.0" }
authors = [
  { name = "clearOCR" }
]
dependencies = [
  "PySide6>=6.6.0",
  "requests>=2.31.0",
  "pypdf>=5.0.0",
]
keywords = ["ocr", "desktop", "pdf", "pyside6", "clearocr"]
classifiers = [
  "Development Status :: 4 - Beta",
  "Environment :: X11 Applications :: Qt",
  "Intended Audience :: End Users/Desktop",
  "License :: OSI Approved :: Apache Software License",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Office/Business",
  "Topic :: Text Processing",
]

[project.urls]
Homepage = "https://clearocr.com"
Repository = "https://github.com/clearocr/clearocr-app"
Issues = "https://github.com/clearocr/clearocr-app/issues"

[project.gui-scripts]
clearocr-app = "clearocr_app.main:main"
clearocr = "clearocr_app.main:main"

[tool.setuptools]
packages = ["clearocr_app"]
include-package-data = true
